--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MagicalBucket
 version: '${project.version}'
 main: thecaptaincook.magicalbucket.MagicalBucket
-api-version: 1.20
-prefix: MWB - 
+api-version: '1.20'
+prefix: Magical Water Bucket
 authors: [TheCaptainCook]
 description: A magical Bucket that never gets empty.
 website: https://github.com/TheCaptainCook
